--- a/src/cms/config.yml
+++ b/src/cms/config.yml
@@ -17,6 +17,15 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Intro Blurb", name: "description", widget: "text"}
       - {label: "Image", name: "image", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
+  - name: "activities" # Used in routes, ie.: /admin/collections/:slug/edit
+    label: "Activitiy" # Used in the UI, ie.: "New Post"
+    folder: "site/content/activities" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    fields: # The fields each document in this collection have
+      - {label: "Activity", name: "title", widget: "string"}
+      - {label: "Start Date", name: "startdate", widget: "datetime"}
+      - {label: "End Date", name: "enddate", widget: "datetime"}
+      - {label: "Ban", name: "ban", widget: "select"}
   - name: "pages"
     label: "Pages"
     files:
